# ROSToolBox

./: CMakeLists.txt  README.md  main.cpp  main.qml
res/: qml.qrc
res/qml/: main.qml
res/qml/windows/: mainwindow.qml
src/: main.cpp
src/inc/: singleton.h
src/inc/components/: CircularReveal.h
src/inc/helpers/: settingshelper.h
src/src/: main.cpp
src/src/components/: CircularReveal.cpp
src/src/helpers/: TranslateHelper.cpp  settingshelper.cpp
translations/: en_US.ts  zh_CN.ts
